fix java 10+ problem (#7)