@@ -23,7 +23,7 @@ pipeline {
           tty: true
           env:
           - name: JAVA_TOOL_OPTIONS
-            value: '-XX:+UseContainerSupport -XX:+UseCGroupMemoryLimitForHeap -Dsun.zip.disableMemoryMapping=true -Xms1024m -Xmx4g'
+            value: '-XX:+UseContainerSupport -Dsun.zip.disableMemoryMapping=true -Xms1024m -Xmx4g'
           - name: MAVEN_OPTS
             value: '-Xmx8g -Xms1024m -XX:MaxPermSize=512m -Xss8m'
           - name: USER
